--- a/style.css
+++ b/style.css
@@ -11,16 +11,18 @@ header {
 }
 nav {
     display: block;
-    min-width: 100px;
+    min-width: 150px;
 }
 li {
     margin: 30px;
 }
 .logo {
-    width: 70px;
-    height: 70px;
-    border-radius:70% ;
+    width: 110px;
+    height: 110px;
+    border-radius:100% ;
     margin-right: 25px;
+    align-self: center;
+    margin-top: 20px;
 }
 .name-project {
     margin: 20px;;
@@ -30,6 +32,8 @@ li {
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    height: auto;
+    padding-bottom: 20px;
 }
 a {
     font-size: 16px;
@@ -56,6 +60,7 @@ body {
     font-size: 22px;
     font-family: 'Times New Roman', serif;
     align-content: center;
+    border-radius: 50%;
 }
 
 .fon1 {
@@ -63,6 +68,7 @@ body {
     margin: auto;
     background-color: #ecb7d5;
     border: 2px solid #ffffff;
+    border-radius:50% ;
 }
 
 .submit {
@@ -75,7 +81,7 @@ body {
     letter-spacing: 2px;
     font-weight: 700;
     border-radius: 20px;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(170, 127, 156);
 }
 
 label {
@@ -104,6 +110,7 @@ img {
 
     .fon1 {
         width: 70%;
+        border-radius:50% ;
     }
 
     .submit {
@@ -120,9 +127,7 @@ img {
 
     .form_item {
         padding-left: 30%;
+        border-radius:50% ;
     }
 
-    img {
-        max-width: 70%;
-    }
 }
